trunk/Archive2/5d/5b50abc4838e41/output
main.cpp: In function 'int main()':
main.cpp:1:16: warning: unused variable 'a' [-Wunused-variable]
 #define M {int a = 45; int b = 23;}
                ^
main.cpp:5:9: note: in expansion of macro 'M'
         M;
         ^
main.cpp:1:28: warning: unused variable 'b' [-Wunused-variable]
 #define M {int a = 45; int b = 23;}
                            ^
main.cpp:5:9: note: in expansion of macro 'M'
         M;
         ^
main.cpp:6:5: error: 'else' without a previous 'if'
     else
     ^
