trunk/Archive2/5d/5b50abc4838e41/main.cpp
#define M {int a = 45; int b = 23;}

int main(){
    if (true)
        M;
    else
        (void)0;
}